# lynixapi-rs-union

./: .gitignore  Cargo.toml  README.md
migrations/: 20240329194055_article.sql  20240329194111_event.sql  20240329235958_booplog.sql  20240406024151_user.sql
src/: config.rs  db.rs  main.rs  services.rs  token.rs
src/auth/: fox_auth.rs  mod.rs
src/dtypes/: mod.rs
src/dtypes/responses/: auth.rs
src/dtypes/structs/: article.rs  boop_log.rs  error_message.rs  mod.rs  user.rs
src/middleware/: handle_cors.rs  mod.rs
src/routes/: auth.rs  blog.rs  boop.rs  mod.rs  websockets.rs
src/utils/: handle_sql_error.rs
src/websockets/: freakshock.rs  freakysuit.rs  mod.rs
