[package]
name = "lynixapi-rs-union"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix = "0.13.3"
actix-web-actors = "4.3.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.115"
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"]}
uuid = { version = "1.8.0", features = ["serde", "v4"]}
futures = "0.3.28"
chrono = {version = "0.4.28", features = ["serde"]}

# Swagger UI
# utoipa = { version = "4.2.0", features = ["actix_extras", "chrono"] }
# utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }