[package]
name = "lynixapi-rs-union"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
#axum-macros = "0.4.1"
tower-http = { version = "=0.5.2", features = ["cors"] }
tower = { version = "0.4.13", features = ["buffer", "load", "limit"] } 
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# Other Deps
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.115"
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"]}
uuid = { version = "1.8.0", features = ["serde", "v4"]}
futures = "0.3.28"
chrono = {version = "0.4.28", features = ["serde"]}
redis = { version = "0.25.3", features = ["tokio-comp"] }
base64 = "0.22.0"
jsonwebtoken = "9.3.0"

# Swagger UI
# utoipa = { version = "4.2.0", features = ["actix_extras", "chrono"] }
# utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }